--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
